--- a/test.html
+++ b/test.html
@@ -11,6 +11,7 @@
 <body>
     <main>
         <h1>George did this.</h1>
+        <p>Remember the fully glazed donut</p>
     </main>
     <script src="index.js"></script>
 </body>
